# Hidden-Wallet-Stellar

./: .env.docker.example  .gitignore  README.md  docker-compose.yml  file_stellar.md  migration.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json  tsconfig.tsbuildinfo
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  app.service.ts  main.ts
backend/test/: http-exception-filter.test.ts
contracts/payment-order/: Cargo.toml  README.md
contracts/payment-order/src/: lib.rs  test.rs
contracts/payment-order/test_snapshots/test/: cancel_order_requires_payer_auth_and_valid_state.1.json  create_and_pay_order_rejects_duplicate_and_invalid_inputs.1.json  create_and_pay_order_succeeds_in_one_transaction.1.json  create_order_rejects_invalid_inputs.1.json  create_order_succeeds_and_stores_created_status.1.json  get_order_returns_error_for_missing_order.1.json  initialize_succeeds_and_rejects_second_call.1.json  pay_order_rejects_missing_expired_paid_and_cancelled_orders.1.json  pay_order_requires_auth_from_stored_payer.1.json  pay_order_requires_payer_auth.1.json  payer_can_cancel_created_order_without_token_transfer.1.json  payer_can_pay_order_and_tokens_move_directly_to_recipient.1.json
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx  index.css
(+93 files in other folders)
